Update notebook and notebook testing

--- a/notebooks/getting-started.ipynb
+++ b/notebooks/getting-started.ipynb
@@ -13,17 +13,26 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "import openscm_runner"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0+untagged.5.g313e7f0.dirty\n"
+      "0.1.0-alpha.0\n"
      ]
     }
    ],
    "source": [
-    "import openscm_runner\n",
+    "# NBVAL_IGNORE_OUTPUT\n",
     "print(openscm_runner.__version__)"
    ]
   }
