--- a/notebooks/getting-started.ipynb
+++ b/notebooks/getting-started.ipynb
@@ -28,7 +28,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.1.0-alpha.0\n"
+      "0.1.0-alpha.1+16.g87cd624.dirty\n"
      ]
     }
    ],
@@ -54,7 +54,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.7.7"
   }
  },
  "nbformat": 4,
