--- a/notebooks/run-fair.ipynb
+++ b/notebooks/run-fair.ipynb
@@ -220,7 +220,11 @@
    ],
    "source": [
     "# NBVAL_IGNORE_OUTPUT\n",
-    "df = pd.read_csv(os.path.join('..', 'data', 'tiny_example_emissions_harmonized_infilled.csv'))\n",
+    "df = pd.read_csv(\n",
+    "    os.path.join(\n",
+    "        \"..\", \"data\", \"tiny_example_emissions_harmonized_infilled.csv\"\n",
+    "    )\n",
+    ")\n",
     "df = pyam.IamDataFrame(df)\n",
     "df_clean = df.filter(variable=\"*Infilled*\")\n",
     "df_fair = df_clean.copy()\n",
@@ -275,10 +279,12 @@
     "# NBVAL_IGNORE_OUTPUT\n",
     "x = run(\n",
     "    climate_models_cfgs={\n",
-    "            \"FAIR\": [{}],   # passing an empty list of an empty dict will run with defaults\n",
-    "        },\n",
+    "        \"FAIR\": [\n",
+    "            {}\n",
+    "        ],  # passing an empty list of an empty dict will run with defaults\n",
+    "    },\n",
     "    scenarios=df_fair,\n",
-    "    output_variables=('Surface Temperature','Atmospheric Concentrations|CO2')\n",
+    "    output_variables=(\"Surface Temperature\", \"Atmospheric Concentrations|CO2\"),\n",
     ")"
    ]
   },
@@ -764,7 +770,9 @@
    ],
    "source": [
     "# NBVAL_IGNORE_OUTPUT\n",
-    "x.filter(variable=\"Surface Temperature\").lineplot(hue=\"scenario\", style=\"model\")"
+    "x.filter(variable=\"Surface Temperature\").lineplot(\n",
+    "    hue=\"scenario\", style=\"model\"\n",
+    ")"
    ]
   },
   {
@@ -797,7 +805,9 @@
    ],
    "source": [
     "# NBVAL_IGNORE_OUTPUT\n",
-    "x.filter(variable=\"Atmospheric Concentrations|CO2\").lineplot(hue=\"scenario\", style=\"model\")"
+    "x.filter(variable=\"Atmospheric Concentrations|CO2\").lineplot(\n",
+    "    hue=\"scenario\", style=\"model\"\n",
+    ")"
    ]
   }
  ],
