--- a/notebooks/run-fair.ipynb
+++ b/notebooks/run-fair.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# Minimal OpenSCM-Runner example with FaIR\n",
     "\n",
-    "Requires fair >= 1.6.0a6 and < 2.0.0"
+    "Requires fair >= 1.6.0c2 and < 2.0.0"
    ]
   },
   {
@@ -107,6 +107,9 @@
     "        \"Effective Radiative Forcing\",\n",
     "        \"Effective Radiative Forcing|CO2\",\n",
     "        \"Effective Radiative Forcing|Aerosols\",\n",
+    "        \"Effective Radiative Forcing|Aerosols|Direct Effect|BC\",\n",
+    "        \"Effective Radiative Forcing|Aerosols|Direct Effect|OC\",\n",
+    "        \"Effective Radiative Forcing|Aerosols|Direct Effect|Sulfur\",\n",
     "        \"Effective Radiative Forcing|Aerosols|Direct Effect\",\n",
     "        \"Effective Radiative Forcing|Aerosols|Indirect Effect\",\n",
     "    ),\n",
