--- a/notebooks/run-fair.ipynb
+++ b/notebooks/run-fair.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# Minimal OpenSCM-Runner example with FaIR\n",
     "\n",
-    "Requires fair >= 1.6.0c2 and < 2.0.0"
+    "Requires fair >= 1.6.0c3 and < 2.0.0"
    ]
   },
   {
@@ -49,7 +49,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.3.1+3.gdd59caa\n"
+      "0.3.1+6.g1a1df9b\n"
      ]
     }
    ],
@@ -96,7 +96,7 @@
     {
      "data": {
       "text/plain": [
-       "'1.6.0c0+10.gd19d82f'"
+       "'1.6.0c3'"
       ]
      },
      "execution_count": 5,
@@ -105,6 +105,7 @@
     }
    ],
    "source": [
+    "# NBVAL_IGNORE_OUTPUT\n",
     "fair.get_version()"
    ]
   },
@@ -956,7 +957,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "1024171245624542b86fa256858aa42f",
+       "model_id": "c762ae316ce14d5a8d8d303cd345f2f4",
        "version_major": 2,
        "version_minor": 0
       },
@@ -970,7 +971,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "3be4a67fe7d24e989d15c769fd3ef3d4",
+       "model_id": "e0f6a3d00ff7432d804ef0238112d0b2",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1029,7 +1030,7 @@
     {
      "data": {
       "text/plain": [
-       "'FaIRv1.6.0c0+10.gd19d82f'"
+       "'FaIRv1.6.0c3'"
       ]
      },
      "execution_count": 8,
@@ -1038,6 +1039,7 @@
     }
    ],
    "source": [
+    "# NBVAL_IGNORE_OUTPUT\n",
     "x.get_unique_meta(\"climate_model\", no_duplicates=True)"
    ]
   },
@@ -1049,7 +1051,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.lines.Line2D at 0x1293c82b0>"
+       "<matplotlib.lines.Line2D at 0x12f8165e0>"
       ]
      },
      "execution_count": 9,
@@ -1087,7 +1089,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x1293bf5b0>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x12e7141c0>"
       ]
      },
      "execution_count": 10,
@@ -1123,7 +1125,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x128b51a30>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x12f029f70>"
       ]
      },
      "execution_count": 11,
@@ -1168,7 +1170,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x129274fa0>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x12f74b880>"
       ]
      },
      "execution_count": 13,
