--- a/notebooks/run-fair-2300.ipynb
+++ b/notebooks/run-fair-2300.ipynb
@@ -40,6 +40,7 @@
     }
    ],
    "source": [
+    "# NBVAL_IGNORE_OUTPUT\n",
     "import openscm_runner"
    ]
   },
@@ -52,7 +53,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.3.1+13.g18b153d.dirty\n"
+      "0.3.1+16.g92369bc.dirty\n"
      ]
     }
    ],
@@ -1240,7 +1241,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "0b75d40199624fe7923eb1703ffe62b5",
+       "model_id": "e962bc80333244208885831a57342905",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1254,7 +1255,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e320420b42b9499b844d5c814e7b921d",
+       "model_id": "eab0c5dc836340af857a94b4350baff8",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1736,7 +1737,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.lines.Line2D at 0x7f987f384bd0>"
+       "<matplotlib.lines.Line2D at 0x7ff2763dcc90>"
       ]
      },
      "execution_count": 11,
@@ -1774,7 +1775,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x7f987d918d90>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x7ff2747a8bd0>"
       ]
      },
      "execution_count": 12,
@@ -1810,7 +1811,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x7f987d841910>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x7ff2746baf50>"
       ]
      },
      "execution_count": 13,
