--- a/notebooks/run-fair.ipynb
+++ b/notebooks/run-fair.ipynb
@@ -38,6 +38,7 @@
     }
    ],
    "source": [
+    "# NBVAL_IGNORE_OUTPUT\n",
     "import openscm_runner"
    ]
   },
@@ -50,7 +51,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.3.1+13.g18b153d.dirty\n"
+      "0.3.1+16.g92369bc.dirty\n"
      ]
     }
    ],
@@ -958,7 +959,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "9f33bd6bf47c4e4e80c4ed367fccac74",
+       "model_id": "e6ca51eb86184b9a894f9974d7b9d972",
        "version_major": 2,
        "version_minor": 0
       },
@@ -972,7 +973,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "5697de6afb774dfd957efb9c9fa28c40",
+       "model_id": "b06333bdad7f49edabe170b001fff260",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1052,7 +1053,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.lines.Line2D at 0x7ff2fdfb0390>"
+       "<matplotlib.lines.Line2D at 0x7feead9e1590>"
       ]
      },
      "execution_count": 9,
@@ -1090,7 +1091,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x7ff2fd5ef550>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x7feeacf9ae50>"
       ]
      },
      "execution_count": 10,
@@ -1126,7 +1127,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x7ff2fcde82d0>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x7feeac797650>"
       ]
      },
      "execution_count": 11,
@@ -1171,7 +1172,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x7ff2fcd4d290>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x7feeac6a5b90>"
       ]
      },
      "execution_count": 13,
