--- a/notebooks/run-fair.ipynb
+++ b/notebooks/run-fair.ipynb
@@ -97,11 +97,13 @@
    "outputs": [],
    "source": [
     "# NBVAL_IGNORE_OUTPUT\n",
+    "\n",
+    "# passing an empty list of an empty dict will run with defaults - which is not a good idea. This notebook just proves it works.\n",
     "x = run(\n",
     "    climate_models_cfgs={\n",
     "        \"FAIR\": [\n",
     "            {}\n",
-    "        ],  # passing an empty list of an empty dict will run with defaults\n",
+    "        ], \n",
     "    },\n",
     "    scenarios=df_fair,\n",
     "    output_variables=(\n",
@@ -175,30 +177,6 @@
     "x.filter(variable=\"Effective Radiative Forcing*\", scenario=\"ssp245\").lineplot(\n",
     "    hue=\"variable\", ax=ax\n",
     ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "rcmip_hist_emms = ScmRun(\"rcmip-emissions-annual-means-4-0-0-ssp-only.csv\", lowercase_cols=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# NBVAL_IGNORE_OUTPUT\n",
-    "ax = plt.figure(figsize=(12, 7)).add_subplot(111)\n",
-    "rcmip_hist_emms.filter(\n",
-    "    scenario=\"ssp245\", \n",
-    "    region=\"World\", \n",
-    "    variable=[\"*BC\", \"*Sulfur\", \"*OC\"]\n",
-    ").lineplot(hue=\"variable\", ax=ax)"
    ]
   }
  ],
