put updated natural emissions and forcing here to make self-contained

--- a/notebooks/run-fair.ipynb
+++ b/notebooks/run-fair.ipynb
@@ -97,18 +97,10 @@
    "outputs": [],
    "source": [
     "# NBVAL_IGNORE_OUTPUT\n",
-    "\n",
-    "# passing an empty list of an empty dict will run with defaults - which is not a good idea.\n",
-    "# When defaults were changed to 1750 this doesn't work with FaIR defaults which start from 1765.\n",
-    "\n",
     "x = run(\n",
     "    climate_models_cfgs={\n",
     "        \"FAIR\": [\n",
-    "            {\n",
-    "                'natural': np.concatenate((natural.Emissions.emissions[0:15,:], natural.Emissions.emissions[:336,:]), axis=0),\n",
-    "                'F_solar': np.concatenate((np.zeros(15), cmip6_solar.Forcing.solar[:336])),\n",
-    "                'F_volcanic': np.concatenate((np.zeros(15), cmip6_volcanic.Forcing.volcanic[:336])),\n",
-    "            }\n",
+    "            {}  # passing an empty list of an empty dict will run with defaults\n",
     "        ], \n",
     "    },\n",
     "    scenarios=df_fair,\n",
