ignore cells in notebook with version mismatch

--- a/notebooks/run-fair-2300.ipynb
+++ b/notebooks/run-fair-2300.ipynb
@@ -109,6 +109,7 @@
     }
    ],
    "source": [
+    "# NBVAL_IGNORE_OUTPUT\n",
     "fair.get_version()"
    ]
   },
@@ -129,6 +130,7 @@
     }
    ],
    "source": [
+    "# NBVAL_IGNORE_OUTPUT\n",
     "scmdata.__version__"
    ]
   },
