--- a/notebooks/run-fair-2300.ipynb
+++ b/notebooks/run-fair-2300.ipynb
@@ -1727,6 +1727,7 @@
     }
    ],
    "source": [
+    "# NBVAL_IGNORE_OUTPUT\n",
     "x.get_unique_meta(\"climate_model\", no_duplicates=True)"
    ]
   },
