restore tests with new values

--- a/notebooks/run-fair.ipynb
+++ b/notebooks/run-fair.ipynb
@@ -47,7 +47,8 @@
     "from tqdm import tqdm_notebook\n",
     "\n",
     "from openscm_runner.run import run\n",
-    "from openscm_runner.adapters import FAIR"
+    "from openscm_runner.adapters import FAIR\n",
+    "from openscm_runner.utils import calculate_quantiles"
    ]
   },
   {
@@ -100,7 +101,9 @@
     "x = run(\n",
     "    climate_models_cfgs={\n",
     "        \"FAIR\": [\n",
-    "            {}  # passing an empty list of an empty dict will run with defaults\n",
+    "            {},  # passing an empty list of an empty dict will run with defaults\n",
+    "            {\"q\": np.array([0.3, 0.45]), \"r0\": 30.0, \"lambda_global\": 0.9},\n",
+    "            {\"q\": np.array([0.35, 0.4]), \"r0\": 25.0, \"lambda_global\": 1.1}, \n",
     "        ], \n",
     "    },\n",
     "    scenarios=df_fair,\n",
@@ -182,7 +185,81 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "x.filter(variable=\"Surface Temperature\", year=2100, scenario=[\"ssp126\"]).values.max()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x.filter(variable=\"Surface Temperature\", year=2100, scenario=[\"ssp126\"]).values.min()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x.filter(variable=\"Surface Temperature\", year=2100, scenario=[\"ssp370\"]).values.max()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x.filter(variable=\"Surface Temperature\", year=2100, scenario=[\"ssp370\"]).values.min()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "quantiles = calculate_quantiles(x, [0.05, 0.17, 0.5, 0.83, 0.95])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "quantiles.filter(variable=\"Surface Temperature\", year=2100, scenario=[\"ssp126\"], quantile=0.05).values[0][0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "quantiles.filter(variable=\"Surface Temperature\", year=2100, scenario=[\"ssp126\"], quantile=0.95).values[0][0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "quantiles.filter(variable=\"Surface Temperature\", year=2100, scenario=[\"ssp370\"], quantile=0.05).values[0][0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "quantiles.filter(variable=\"Surface Temperature\", year=2100, scenario=[\"ssp370\"], quantile=0.95).values[0][0]"
+   ]
   }
  ],
  "metadata": {
