checks and changelog

--- a/notebooks/climate-assessment.ipynb
+++ b/notebooks/climate-assessment.ipynb
@@ -1004,10 +1004,8 @@
    "source": [
     "# NBVAL_IGNORE_OUTPUT\n",
     "df_fair = ScmRun(\n",
-    "    os.path.join(\n",
-    "        \"..\", \"tests\", \"test-data\", \"clean_scenarios.csv\"\n",
-    "    ),\n",
-    "    lowercase_cols=True\n",
+    "    os.path.join(\"..\", \"tests\", \"test-data\", \"clean_scenarios.csv\"),\n",
+    "    lowercase_cols=True,\n",
     ")\n",
     "\n",
     "df_fair.head(30)"
@@ -1064,12 +1062,12 @@
     "        \"FAIR\": [\n",
     "            {},  # passing an empty list of an empty dict will run with defaults\n",
     "            {\"q\": np.array([0.3, 0.45]), \"r0\": 30.0, \"lambda_global\": 0.9},\n",
-    "            {\"q\": np.array([0.35, 0.4]), \"r0\": 25.0, \"lambda_global\": 1.1}, \n",
-    "        ], \n",
+    "            {\"q\": np.array([0.35, 0.4]), \"r0\": 25.0, \"lambda_global\": 1.1},\n",
+    "        ],\n",
     "    },\n",
     "    scenarios=df_fair,\n",
     "    output_variables=(\n",
-    "        \"Surface Temperature\", \n",
+    "        \"Surface Temperature\",\n",
     "        \"Atmospheric Concentrations|CO2\",\n",
     "        \"Effective Radiative Forcing\",\n",
     "        \"Effective Radiative Forcing|CO2\",\n",
