--- a/notebooks/fair-gmst-ohu-factors.ipynb
+++ b/notebooks/fair-gmst-ohu-factors.ipynb
@@ -82,7 +82,7 @@
     "    os.path.join(\n",
     "        \"..\", \"tests\", \"test-data\", \"rcmip_scen_ssp_world_emissions.csv\"\n",
     "    ),\n",
-    "    lowercase_cols=True\n",
+    "    lowercase_cols=True,\n",
     ")"
    ]
   },
@@ -98,18 +98,15 @@
     "x = run(\n",
     "    climate_models_cfgs={\n",
     "        \"FAIR\": [\n",
-    "            {}, # passing an empty list of an empty dict will run with defaults\n",
-    "            {\n",
-    "                'ohu_factor': 0.95,\n",
-    "                'gmst_factor': np.linspace(0.90,1.00,351)\n",
-    "            }\n",
-    "        ],  \n",
+    "            {},  # passing an empty list of an empty dict will run with defaults\n",
+    "            {\"ohu_factor\": 0.95, \"gmst_factor\": np.linspace(0.90, 1.00, 351)},\n",
+    "        ],\n",
     "    },\n",
     "    scenarios=df_fair,\n",
     "    output_variables=(\n",
     "        \"Surface Temperature (GMST)\",\n",
     "        \"Heat Content|Ocean\",\n",
-    "        \"Heat Uptake|Ocean\"\n",
+    "        \"Heat Uptake|Ocean\",\n",
     "    ),\n",
     ")"
    ]
