--- a/notebooks/run-fair-2300.ipynb
+++ b/notebooks/run-fair-2300.ipynb
@@ -1226,7 +1226,7 @@
     "    os.path.join(\n",
     "        \"..\", \"tests\", \"test-data\", \"rcmip_scen_ssp_world_emissions_2300.csv\"\n",
     "    ),\n",
-    "    lowercase_cols=True\n",
+    "    lowercase_cols=True,\n",
     ")\n",
     "\n",
     "df_fair.head(30)"
@@ -1286,7 +1286,7 @@
     "    },\n",
     "    scenarios=df_fair,\n",
     "    output_variables=(\n",
-    "        \"Surface Temperature\", \n",
+    "        \"Surface Temperature\",\n",
     "        \"Atmospheric Concentrations|CO2\",\n",
     "        \"Effective Radiative Forcing\",\n",
     "        \"Effective Radiative Forcing|CO2\",\n",
