--- a/notebooks/run-fair.ipynb
+++ b/notebooks/run-fair.ipynb
@@ -83,7 +83,7 @@
     "    os.path.join(\n",
     "        \"..\", \"tests\", \"test-data\", \"rcmip_scen_ssp_world_emissions.csv\"\n",
     "    ),\n",
-    "    lowercase_cols=True\n",
+    "    lowercase_cols=True,\n",
     ")\n",
     "\n",
     "df_fair.head(30)"
@@ -103,12 +103,12 @@
     "        \"FAIR\": [\n",
     "            {},  # passing an empty list of an empty dict will run with defaults\n",
     "            {\"q\": np.array([0.3, 0.45]), \"r0\": 30.0, \"lambda_global\": 0.9},\n",
-    "            {\"q\": np.array([0.35, 0.4]), \"r0\": 25.0, \"lambda_global\": 1.1}, \n",
-    "        ], \n",
+    "            {\"q\": np.array([0.35, 0.4]), \"r0\": 25.0, \"lambda_global\": 1.1},\n",
+    "        ],\n",
     "    },\n",
     "    scenarios=df_fair,\n",
     "    output_variables=(\n",
-    "        \"Surface Temperature\", \n",
+    "        \"Surface Temperature\",\n",
     "        \"Atmospheric Concentrations|CO2\",\n",
     "        \"Effective Radiative Forcing\",\n",
     "        \"Effective Radiative Forcing|CO2\",\n",
@@ -186,7 +186,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "x.filter(variable=\"Surface Temperature\", year=2100, scenario=[\"ssp126\"]).values.max()"
+    "x.filter(\n",
+    "    variable=\"Surface Temperature\", year=2100, scenario=[\"ssp126\"]\n",
+    ").values.max()"
    ]
   },
   {
@@ -195,7 +197,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "x.filter(variable=\"Surface Temperature\", year=2100, scenario=[\"ssp126\"]).values.min()"
+    "x.filter(\n",
+    "    variable=\"Surface Temperature\", year=2100, scenario=[\"ssp126\"]\n",
+    ").values.min()"
    ]
   },
   {
@@ -204,7 +208,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "x.filter(variable=\"Surface Temperature\", year=2100, scenario=[\"ssp370\"]).values.max()"
+    "x.filter(\n",
+    "    variable=\"Surface Temperature\", year=2100, scenario=[\"ssp370\"]\n",
+    ").values.max()"
    ]
   },
   {
@@ -213,7 +219,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "x.filter(variable=\"Surface Temperature\", year=2100, scenario=[\"ssp370\"]).values.min()"
+    "x.filter(\n",
+    "    variable=\"Surface Temperature\", year=2100, scenario=[\"ssp370\"]\n",
+    ").values.min()"
    ]
   },
   {
@@ -231,7 +239,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "quantiles.filter(variable=\"Surface Temperature\", year=2100, scenario=[\"ssp126\"], quantile=0.05).values[0][0]"
+    "quantiles.filter(\n",
+    "    variable=\"Surface Temperature\",\n",
+    "    year=2100,\n",
+    "    scenario=[\"ssp126\"],\n",
+    "    quantile=0.05,\n",
+    ").values[0][0]"
    ]
   },
   {
@@ -240,7 +253,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "quantiles.filter(variable=\"Surface Temperature\", year=2100, scenario=[\"ssp126\"], quantile=0.95).values[0][0]"
+    "quantiles.filter(\n",
+    "    variable=\"Surface Temperature\",\n",
+    "    year=2100,\n",
+    "    scenario=[\"ssp126\"],\n",
+    "    quantile=0.95,\n",
+    ").values[0][0]"
    ]
   },
   {
@@ -249,7 +267,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "quantiles.filter(variable=\"Surface Temperature\", year=2100, scenario=[\"ssp370\"], quantile=0.05).values[0][0]"
+    "quantiles.filter(\n",
+    "    variable=\"Surface Temperature\",\n",
+    "    year=2100,\n",
+    "    scenario=[\"ssp370\"],\n",
+    "    quantile=0.05,\n",
+    ").values[0][0]"
    ]
   },
   {
@@ -258,7 +281,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "quantiles.filter(variable=\"Surface Temperature\", year=2100, scenario=[\"ssp370\"], quantile=0.95).values[0][0]"
+    "quantiles.filter(\n",
+    "    variable=\"Surface Temperature\",\n",
+    "    year=2100,\n",
+    "    scenario=[\"ssp370\"],\n",
+    "    quantile=0.95,\n",
+    ").values[0][0]"
    ]
   }
  ],
