Ignore notebook cells

--- a/notebooks/run-fair.ipynb
+++ b/notebooks/run-fair.ipynb
@@ -1174,6 +1174,7 @@
     }
    ],
    "source": [
+    "# NBVAL_IGNORE_OUTPUT\n",
     "x.filter(\n",
     "    variable=\"Surface Air Temperature Change\", year=2100, scenario=[\"ssp126\"]\n",
     ").values.max()"
@@ -1196,6 +1197,7 @@
     }
    ],
    "source": [
+    "# NBVAL_IGNORE_OUTPUT\n",
     "x.filter(\n",
     "    variable=\"Surface Air Temperature Change\", year=2100, scenario=[\"ssp126\"]\n",
     ").values.min()"
@@ -1218,6 +1220,7 @@
     }
    ],
    "source": [
+    "# NBVAL_IGNORE_OUTPUT\n",
     "x.filter(\n",
     "    variable=\"Surface Air Temperature Change\", year=2100, scenario=[\"ssp370\"]\n",
     ").values.max()"
@@ -1240,6 +1243,7 @@
     }
    ],
    "source": [
+    "# NBVAL_IGNORE_OUTPUT\n",
     "x.filter(\n",
     "    variable=\"Surface Air Temperature Change\", year=2100, scenario=[\"ssp370\"]\n",
     ").values.min()"
@@ -1271,6 +1275,7 @@
     }
    ],
    "source": [
+    "# NBVAL_IGNORE_OUTPUT\n",
     "quantiles.filter(\n",
     "    variable=\"Surface Air Temperature Change\",\n",
     "    year=2100,\n",
@@ -1296,6 +1301,7 @@
     }
    ],
    "source": [
+    "# NBVAL_IGNORE_OUTPUT\n",
     "quantiles.filter(\n",
     "    variable=\"Surface Air Temperature Change\",\n",
     "    year=2100,\n",
@@ -1321,6 +1327,7 @@
     }
    ],
    "source": [
+    "# NBVAL_IGNORE_OUTPUT\n",
     "quantiles.filter(\n",
     "    variable=\"Surface Air Temperature Change\",\n",
     "    year=2100,\n",
@@ -1346,6 +1353,7 @@
     }
    ],
    "source": [
+    "# NBVAL_IGNORE_OUTPUT\n",
     "quantiles.filter(\n",
     "    variable=\"Surface Air Temperature Change\",\n",
     "    year=2100,\n",
