--- a/notebooks/fair-gmst-ohu-factors.ipynb
+++ b/notebooks/fair-gmst-ohu-factors.ipynb
@@ -31,7 +31,7 @@
      "output_type": "stream",
      "text": [
       "pyam - INFO: Running in a notebook, setting `pyam` logging level to `logging.INFO` and adding stderr handler\n",
-      "/Users/znicholls/Documents/AGCEC/MCastle/openscm-runner/src/openscm_runner/run.py:7: TqdmExperimentalWarning: Using `tqdm.autonotebook.tqdm` in notebook mode. Use `tqdm.tqdm` instead to force console mode (e.g. in jupyter console)\n",
+      "/home/jared/code/uom/openscm-runner/src/openscm_runner/run.py:7: TqdmExperimentalWarning: Using `tqdm.autonotebook.tqdm` in notebook mode. Use `tqdm.tqdm` instead to force console mode (e.g. in jupyter console)\n",
       "  from tqdm.autonotebook import tqdm\n"
      ]
     }
@@ -50,7 +50,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.4.4+5.g9307ca0.dirty\n"
+      "0.4.4+48.gc9ac41f\n"
      ]
     }
    ],
@@ -72,7 +72,6 @@
     "import pandas as pd\n",
     "import pyam\n",
     "from fair.forward import fair_scm\n",
-    "from fair.tools.scmdf import scmdf_to_emissions\n",
     "from scmdata import ScmRun\n",
     "from tqdm import tqdm_notebook\n",
     "\n",
@@ -97,7 +96,7 @@
     {
      "data": {
       "text/plain": [
-       "'1.6.1'"
+       "'1.6.3'"
       ]
      },
      "execution_count": 5,
@@ -137,7 +136,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "6049879f7c9e45eb8cf4a643af3e930c",
+       "model_id": "14c1ab6f99ea4c53ad3bfcba0e5b51f7",
        "version_major": 2,
        "version_minor": 0
       },
@@ -151,7 +150,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "26d4eda6e84b4c29afb8a5c014149518",
+       "model_id": "e983fd439a5742b889fc4197f0dadca2",
        "version_major": 2,
        "version_minor": 0
       },
@@ -204,7 +203,7 @@
     {
      "data": {
       "text/plain": [
-       "'FaIRv1.6.1'"
+       "'FaIRv1.6.3'"
       ]
      },
      "execution_count": 8,
@@ -232,7 +231,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x12f77f040>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x7f365e052310>"
       ]
      },
      "execution_count": 9,
@@ -273,7 +272,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x13092a040>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x7f365d53f450>"
       ]
      },
      "execution_count": 10,
@@ -314,7 +313,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x12ffdd400>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x7f365dfa1d90>"
       ]
      },
      "execution_count": 11,
@@ -364,7 +363,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
