--- a/notebooks/run-ciceroscm.ipynb
+++ b/notebooks/run-ciceroscm.ipynb
@@ -1050,13 +1050,7 @@
       "2021-05-27 02:30:55 openscm_runner.adapters.ciceroscm_adapter.make_scenario_files MainThread - WARNING:  No H-2402 data available, using ssp245\n",
       "2021-05-27 02:30:55 openscm_runner.adapters.ciceroscm_adapter.make_scenario_files MainThread - WARNING:  No BMB_AEROS_BC data available, using ssp245\n",
       "2021-05-27 02:30:55 openscm_runner.adapters.ciceroscm_adapter.make_scenario_files MainThread - WARNING:  No BMB_AEROS_OC data available, using ssp245\n",
-      "2021-05-27 02:30:56 openscm_runner.adapters.ciceroscm_adapter.ciceroscm_wrapper MainThread - INFO:  Removing CICERO-SCM instance: /tmp/ciceroscm-tdthunqc\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
+      "2021-05-27 02:30:56 openscm_runner.adapters.ciceroscm_adapter.ciceroscm_wrapper MainThread - INFO:  Removing CICERO-SCM instance: /tmp/ciceroscm-tdthunqc\n",
       "2021-05-27 02:30:56 openscm_runner.adapters.ciceroscm_adapter.ciceroscm_wrapper MainThread - INFO:  Creating new CICERO-SCM instance: /tmp/ciceroscm-r7fy70x2\n",
       "2021-05-27 02:30:56 openscm_runner.adapters.ciceroscm_adapter.make_scenario_files MainThread - WARNING:  No CFC-11 data available, using ssp245\n",
       "2021-05-27 02:30:56 openscm_runner.adapters.ciceroscm_adapter.make_scenario_files MainThread - WARNING:  No CFC-12 data available, using ssp245\n",
@@ -1113,13 +1107,7 @@
       "2021-05-27 02:30:58 openscm_runner.adapters.ciceroscm_adapter.make_scenario_files MainThread - WARNING:  No H-2402 data available, using ssp245\n",
       "2021-05-27 02:30:58 openscm_runner.adapters.ciceroscm_adapter.make_scenario_files MainThread - WARNING:  No BMB_AEROS_BC data available, using ssp245\n",
       "2021-05-27 02:30:58 openscm_runner.adapters.ciceroscm_adapter.make_scenario_files MainThread - WARNING:  No BMB_AEROS_OC data available, using ssp245\n",
-      "2021-05-27 02:30:59 openscm_runner.adapters.ciceroscm_adapter.ciceroscm_wrapper MainThread - INFO:  Removing CICERO-SCM instance: /tmp/ciceroscm-tuf4iiei\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
+      "2021-05-27 02:30:59 openscm_runner.adapters.ciceroscm_adapter.ciceroscm_wrapper MainThread - INFO:  Removing CICERO-SCM instance: /tmp/ciceroscm-tuf4iiei\n",
       "2021-05-27 02:30:59 openscm_runner.adapters.ciceroscm_adapter.ciceroscm_wrapper MainThread - INFO:  Creating new CICERO-SCM instance: /tmp/ciceroscm-kwa39gxb\n",
       "2021-05-27 02:30:59 openscm_runner.adapters.ciceroscm_adapter.make_scenario_files MainThread - WARNING:  No CFC-11 data available, using ssp245\n",
       "2021-05-27 02:30:59 openscm_runner.adapters.ciceroscm_adapter.make_scenario_files MainThread - WARNING:  No CFC-12 data available, using ssp245\n",
@@ -1176,13 +1164,7 @@
       "2021-05-27 02:31:01 openscm_runner.adapters.ciceroscm_adapter.make_scenario_files MainThread - WARNING:  No H-2402 data available, using ssp245\n",
       "2021-05-27 02:31:01 openscm_runner.adapters.ciceroscm_adapter.make_scenario_files MainThread - WARNING:  No BMB_AEROS_BC data available, using ssp245\n",
       "2021-05-27 02:31:01 openscm_runner.adapters.ciceroscm_adapter.make_scenario_files MainThread - WARNING:  No BMB_AEROS_OC data available, using ssp245\n",
-      "2021-05-27 02:31:02 openscm_runner.adapters.ciceroscm_adapter.ciceroscm_wrapper MainThread - INFO:  Removing CICERO-SCM instance: /tmp/ciceroscm-r8_isy1v\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
+      "2021-05-27 02:31:02 openscm_runner.adapters.ciceroscm_adapter.ciceroscm_wrapper MainThread - INFO:  Removing CICERO-SCM instance: /tmp/ciceroscm-r8_isy1v\n",
       "2021-05-27 02:31:02 openscm_runner.adapters.ciceroscm_adapter.ciceroscm_wrapper MainThread - INFO:  Creating new CICERO-SCM instance: /tmp/ciceroscm-ies2v6mi\n",
       "2021-05-27 02:31:02 openscm_runner.adapters.ciceroscm_adapter.make_scenario_files MainThread - WARNING:  No CFC-11 data available, using ssp245\n",
       "2021-05-27 02:31:02 openscm_runner.adapters.ciceroscm_adapter.make_scenario_files MainThread - WARNING:  No CFC-12 data available, using ssp245\n",
@@ -2243,7 +2225,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -2257,7 +2239,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.5"
+   "version": "3.7.0"
   }
  },
  "nbformat": 4,
